--- a/Aula 02.ipynb
+++ b/Aula 02.ipynb
@@ -16,7 +16,7 @@
     "- Permite conhecer a distribuição dos valores\n",
     "- Possibilita formular hipóteses e desenvolver insights sobre os dados\n",
     "\n",
-    "<img src=\"img/eda.png\">\n",
+    "<img src=\"./img/eda.png\">\n",
     "\n",
     "<strong>Fonte:</strong> https://en.wikipedia.org/wiki/Exploratory_data_analysis\n",
     "\n",
@@ -53,13 +53,13 @@
     "## Datasets clássicos\n",
     "\n",
     "<strong>MNIST:</strong> dígitos escritos à mão. 70 mil imagens em 10 classes.\n",
-    "<img src=\"img/mnist.png\"><br>\n",
+    "<img src=\"./img/mnist.png\"><br>\n",
     "\n",
     "<strong>ImageNet:</strong> aproximadamente 1.500.000 imagens, associadas às suas descrições.\n",
-    "<img src=\"img/imagenet.png\"><br>\n",
+    "<img src=\"./img/imagenet.png\"><br>\n",
     "\n",
     "<strong>CIFAR-10:</strong> 60.000 imagens em 10 classes.\n",
-    "<img src=\"img/cifar.png\"><br>\n",
+    "<img src=\"./img/cifar.png\"><br>\n",
     "\n",
     "<strong>IMDB Reviews:</strong> 25.000 reviews de filmes para treino e 25.000 para teste de análise de sentimentos.<br>\n",
     "\n",
@@ -77,7 +77,7 @@
     "<p>Dataset \"hello world\" para machine learning:</p>\n",
     "<a href=\"https://archive.ics.uci.edu/ml/datasets/iris\">https://archive.ics.uci.edu/ml/datasets/iris</a>\n",
     "\n",
-    "<img src=\"img/iris.png\">\n",
+    "<img src=\"./img/iris.png\">\n",
     "\n",
     "<strong>Fonte:</strong> https://rpubs.com/wjholst/322258"
    ]
