--- a/Aula 02.ipynb
+++ b/Aula 02.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 2:  Análise Exploratória de Dados\n",
+    "## Instituto Federal do Sudeste de Minas Gerais, Campus Barbacena\n",
+    "### Projeto Laboratório de Redes de Conhecimento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Curso de Mineração de Dados Aplicada\n",
+    "\n",
+    "Prof. Rafael José de Alencar Almeida\n",
+    "<rafael.alencar@ifsudestemg.edu.br>\n",
+    "\n",
+    "### Aula 2:  Análise Exploratória de Dados\n",
     "\n",
     "<strong>EDA (<i>Exploratory Data Analysis</i>)</strong>\n",
     "\n",
@@ -1670,7 +1683,7 @@
    "source": [
     "## Wine dataset\n",
     "\n",
-    "Descrição"
+    "Características físico-químicas de vinhos e sua qualidade (avaliada por humanos)"
    ]
   },
   {
