--- a/Aula 04.ipynb
+++ b/Aula 04.ipynb
@@ -1013,28 +1013,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "163"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Similaridade via fuzzywuzzy\n",
+    "# Similaridade via distância de Levenshtein\n",
     "from Levenshtein import distance\n",
     "\n",
     "distance(\n",
     "    df.iloc[0].doc,\n",
-    "    df.iloc[0].doc\n",
+    "    df.iloc[1].doc\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance(\n",
+    "    df.iloc[0].doc,\n",
+    "    df.iloc[100].doc\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análise de sentimentos\n",
+    "\n",
+    "Detectar automaticamente a polaridade e intensidade do sentimento expresso em um texto."
    ]
   },
   {
