--- a/Aula 05.ipynb
+++ b/Aula 05.ipynb
@@ -945,7 +945,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6bc1fcbc88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd4e1640c88>"
       ]
      },
      "execution_count": 7,
@@ -1163,7 +1163,7 @@
      "output_type": "stream",
      "text": [
       "[0.28173931 0.1750827 ]\n",
-      "O PCA conseguir explicar 45.682201184294144% da variação dos dados\n"
+      "O PCA conseguir explicar 45.682201184294094% da variação dos dados\n"
      ]
     }
    ],
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1507,7 @@
        "(1000, 1269)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
      "output_type": "stream",
      "text": [
       "Matriz W: (1000, 5)\n",
-      "Matriz H: (5, 6393)\n"
+      "Matriz H: (5, 1269)\n"
      ]
     }
    ],
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1566,39 +1566,39 @@
      "text": [
       "\n",
       "Tópico 1\n",
-      "   Principais termos: divulgado (0.96), resultado (0.87), divulgado resultado (0.74), edital (0.5), divulgada (0.34)\n",
+      "   Principais termos: divulgado (1.84), resultado (1.53), edital (0.53), projetos (0.38), cursos (0.29)\n",
       "   Principais notícias relacionadas ao tópico:\n",
       "\t- Divulgado o Resultado final do Edital 04/2016  (0.34)\n",
-      "\t- Divulgado o Edital Retificado do Programa de Monitoria 2016-1  (0.22)\n",
-      "\t- Divulgado o resultado da eleição dos discentes para compor os colegiados dos cursos técnicos integrados ao ensino médio  (0.22)\n",
+      "\t- Divulgado o Resultado da seleção de projetos para o Programa de Monitoria / Edital 002/2016  (0.25)\n",
+      "\t- Divulgado o Resultado Final Edital 020/2016 – Projetos de Extensão   (0.25)\n",
       "\n",
       "Tópico 2\n",
-      "   Principais termos: campus (1.06), campus realiza (0.68), realiza (0.66), divulga (0.35), campus divulga (0.35)\n",
+      "   Principais termos: campus (1.58), realiza (0.69), divulga (0.66), resultados (0.2), participa (0.19)\n",
       "   Principais notícias relacionadas ao tópico:\n",
-      "\t- Campus Barbacena realiza Colação de Grau   (0.47)\n",
-      "\t- Campus Barbacena realiza Colação de Grau   (0.47)\n",
-      "\t- Campus Barbacena tem medalhistas na premiação da OBMEP 2015  (0.39)\n",
+      "\t- Campus Barbacena tem medalhistas na premiação da OBMEP 2015  (0.41)\n",
+      "\t- Campus Barbacena realiza Colação de Grau   (0.36)\n",
+      "\t- Campus Barbacena realiza Colação de Grau   (0.36)\n",
       "\n",
       "Tópico 3\n",
-      "   Principais termos: atenção (1.44), atenção química (0.34), química (0.33), atenção técnicos (0.18), técnicos (0.17)\n",
+      "   Principais termos: atenção (1.78), química (0.38), informações (0.21), técnicos (0.21), agronomia (0.15)\n",
       "   Principais notícias relacionadas ao tópico:\n",
-      "\t- Atenção alunos dos cursos de graduação   (0.54)\n",
-      "\t- Atenção: Aviso aos formandos 02/2016  (0.54)\n",
-      "\t- Atenção:  Aulas no Núcleo de Química  (0.36)\n",
+      "\t- Atenção: Aviso aos formandos 02/2016  (0.48)\n",
+      "\t- Atenção alunos dos cursos de graduação   (0.48)\n",
+      "\t- Atenção: Seleção de bolsistas - monitores na área de Química  (0.35)\n",
       "\n",
       "Tópico 4\n",
-      "   Principais termos: barbacena (1.38), movimenta barbacena (0.22), movimenta (0.22), campus barbacena (0.2), mg (0.11)\n",
+      "   Principais termos: barbacena (1.61), mg (0.34), if (0.33), movimenta (0.26), curso (0.22)\n",
       "   Principais notícias relacionadas ao tópico:\n",
-      "\t- X IFérias: muito lazer e diversão no Campus Barbacena  (0.59)\n",
-      "\t- V FECIB - Oficina de Elaboração de Projetos foi ministrada no Campus Barbacena  (0.59)\n",
-      "\t- Estão abertas as inscrições para Oficina de Teatro no Campus Barbacena  (0.59)\n",
+      "\t- X IFérias: muito lazer e diversão no Campus Barbacena  (0.5)\n",
+      "\t- Estão abertas as inscrições para Oficina de Teatro no Campus Barbacena  (0.5)\n",
+      "\t- Estão abertas as inscrições para Oficina de Teatro no Campus Barbacena  (0.5)\n",
       "\n",
       "Tópico 5\n",
-      "   Principais termos: comunicado (1.16), comunicado aposentadoria (0.79), aposentadoria (0.79), comunicado refeitório (0.12), refeitório (0.12)\n",
+      "   Principais termos: divulgada (1.18), retificação (0.66), edital (0.62), homologação (0.34), eleição (0.27)\n",
       "   Principais notícias relacionadas ao tópico:\n",
-      "\t- Comunicado de aposentadoria  (0.58)\n",
-      "\t- Comunicado aposentadoria  (0.58)\n",
-      "\t- Comunicado de aposentadoria  (0.58)\n"
+      "\t- Divulgada a retificação do Edital de Monitoria  (0.42)\n",
+      "\t- Divulgada a retificação do Edital de Extensão 08/2017  (0.42)\n",
+      "\t- Divulgada a Retificação do Edital nº 27/2016 - Estágio Remunerado  (0.42)\n"
      ]
     }
    ],
